# NeuroCI

./: .env.example  .gitignore  ANALYSIS_COMPLETE.md  ARCHITECTURE_DEEP_DIVE.md  DEMO.md  DEMO_OBSERVABILITY_GUIDE.md  DEMO_RUNNING_PROCEDURE.md  DOCUMENTATION_INDEX.md  Dockerfile  EXECUTIVE_SUMMARY.md  HANDOUT.md  LICENSE  NEUROCI_LIVE_DEMO_RUNBOOK.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  SPEAKER_NOTES.md  VISUAL_OVERVIEW.md  demo_run.py  docker-compose.yml  neuroci_docs.html  presentation.md  pyproject.toml  requirements.txt  run_demo.ps1  sample_push_file.txt  temp_service_logs.txt  temp_worker_health.json  temp_worker_state_utf8.txt  worker_healthlog.txt
.github/workflows/: ci.yml
grafana/dashboards/: dashboard.yml  neuroci.json
grafana/datasources/: prometheus.yml
helm/neuroci/: Chart.yaml  values.yaml
k8s/: celery-worker.yaml  infrastructure.yaml  namespace.yaml  webhook-server.yaml
policies/: neuroci.rego
prometheus/: prometheus.yml
scripts/: .env.last.hash  send_signed_webhook.py  start-local.ps1  stop-local.ps1  test-webhook.ps1
src/: __init__.py  config.py  main.py  models.py
src/agent/: classifier.py  debate.py  llm_factory.py  patch_generator.py  prompts.py  repair_agent.py  validator.py
src/ci/: __init__.py  analyzer.py  remediator.py  router.py  storage.py
src/github/: pr_manager.py
src/memory/: seed_data.py  vector_store.py
src/metrics/: prometheus.py
src/notifications/: slack_bot.py
src/pipeline/: github_client.py  log_parser.py
src/policy/: opa_client.py
src/tasks/: repair_task.py
src/webhook/: receiver.py  security.py
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: test_ci_failure_analysis.py  test_classifier.py  test_config.py  test_github_client.py  test_integration.py  test_llm_factory.py  test_log_parser.py  test_metrics.py  test_opa_client.py  test_patch_generator.py  test_pr_manager.py  test_remediator.py  test_slack_bot.py  test_validator.py  test_vector_store.py  test_webhook.py
tests/fixtures/: metadata.json
(+43 files in other folders)
