[project]
name = "neuroci"
version = "1.0.0"
description = "AI-native autonomous CI/CD repair system — the self-healing pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NeuroCI Team" }]
keywords = ["ci", "cd", "devops", "ai", "llm", "github-actions", "self-healing"]

dependencies = [
    # ── Web framework ──
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "httpx>=0.27.0",

    # ── Async task queue ──
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # ── LLM & AI (multi-provider) ──
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0",   # Google Gemini (FREE)
    "langchain-groq>=0.2.0",           # Groq (FREE tier)
    "langchain-ollama>=0.2.0",         # Ollama (FREE, local)
    "langchain-openai>=0.2.0",         # OpenAI (paid)

    # ── Vector store / RAG ──
    "chromadb>=0.5.0",

    # ── Policy engine ──
    "opa-python-client>=1.3.0",

    # ── Patch validation ──
    "flake8>=7.0.0",

    # ── Notifications ──
    "slack-bolt>=1.19.0",
    "slack-sdk>=3.31.0",

    # ── Observability ──
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",

    # ── Utilities ──
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
